# wger-hero

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: achievements.py  config.py  database.py  diagnostics.py  habits.py  main.py  models.py  quests.py  rewards.py  seed_defaults.py  stats.py  sync.py  wger_client.py  xp.py
app/static/: style.css
app/templates/: achievements.html  base.html  dashboard.html  habit_form.html  habits.html  quest_form.html  quests.html  settings.html  stats.html
tests/: conftest.py  test_config.py  test_custom_quests.py  test_diagnostics.py  test_habit_deletion.py  test_habits.py  test_quests.py  test_rewards.py  test_routes.py  test_seed_defaults.py  test_stats.py  test_sync.py  test_sync_improvements.py  test_sync_robustness.py  test_xp.py
